--- a/sigmaCabs/app/views/dispatches/vehicleDetailedInfoSplitView.html
+++ b/sigmaCabs/app/views/dispatches/vehicleDetailedInfoSplitView.html
@@ -1,5 +1,38 @@
 <div class="container-fluid vehicleDetailsControlView">
-	<h4>Vehicle and Driver Details</h4>
+	<h4 class="left">Vehicle and Driver Details</h4>
+	<div class="btn-group left" style="margin-top: 5px;">
+        <button type="button" class="btnCompact dropdown-toggle" data-toggle="dropdown" data-ng-disabled="vInfoButtonsDisable">Add Request <span class="caret"></span></button>
+        <ul class="dropdown-menu" role="menu" ng-switch on="vehicleDetailsData.vehicle.vehicleStatus">
+            <!-- <li><a href="javascript:void(0);" data-ng-click="fnOpenDisposition()" title="Open Disposition. For:- Enquiry, Follow-up, Rejection.">Disposition</a></li>
+            <li class="divider"></li> -->
+            <li><a href="javascript:void(0);" data-ng-click="fnChangeVehiclePhone()">Change Primary No.</a></li>
+            <li ng-switch-when="2"><a href="javascript:void(0);" data-ng-click="fnVehicleChangeLocation()">Change Location.</a></li>
+            <li><a href="javascript:void(0);" data-ng-click="fnChangeVehicleStatus()">Vehcile Status Change</a></li>
+            <li class="divider"></li>
+            <li ng-switch-when="4"><a href="javascript:void(0);" data-ng-click="fnChangeVehicle()">Change Vehicle</a></li>
+            <li ng-switch-when="5"><a href="javascript:void(0);" data-ng-click="fnChangeVehicle()">Change Vehicle</a></li>
+            <li ng-switch-when="6"><a href="javascript:void(0);" data-ng-click="fnChangeVehicle()">Change Vehicle</a></li>
+
+
+            <li ng-switch-when="4"><a href="javascript:void(0);" data-ng-click="fnVehicleConfirm()">Confirm</a></li>
+            <li ng-switch-when="4"><a href="javascript:void(0);" data-ng-click="fnVehicleRejectBooking()">Rejected</a></li>
+            <li ng-switch-when="5"><a href="javascript:void(0);" data-ng-click="fnVehicleBookingCancel()">Cancel</a></li>
+            <li ng-switch-when="5"><a href="javascript:void(0);" data-ng-click="fnVehicleRejectBooking()">Rejected</a></li>
+            <li ng-switch-when="5"><a href="javascript:void(0);" data-ng-click="fnVehicleBookingStart()">Start Report</a></li>
+            <li ng-switch-when="5"><a href="javascript:void(0);" data-ng-click="fnVehicleBookingTariff()">Change Tariff</a></li>
+            <li ng-switch-when="5"><a href="javascript:void(0);" data-ng-click="fnChangeVehPickupLocation()" title="Change Pickup Location">CPL</a></li>
+            <li ng-switch-when="6"><a href="javascript:void(0);" data-ng-click="fnVehicleBookingClose()">Closing Report</a></li>
+            <li class="divider"></li>
+            <li ng-switch-when="2"><a href="javascript:void(0);" data-ng-click="fnVehicleBreakStart()">Break Start</a></li>
+            <li ng-switch-when="3"><a href="javascript:void(0);" data-ng-click="fnVehicleBreakStop()">Break Stop</a></li>
+            <li ng-if="vehicleDetailsData.vehicle.vehicleStatus != 1"><a href="javascript:void(0);" data-ng-click="fnVehicleLogout()">Logout</a></li>
+            <li class="divider"></li>
+            <li><a href="javascript:void(0);" data-ng-click="fnRoadSideBooking()">Road Side Booking</a></li>
+            <li class="divider"></li>
+            <li ng-if="vehicleDetailsData.vehicle.vehicleStatus != 1"><a href="javascript:void(0);" data-ng-click="fnVehicleBreakdown()">Vehicle Breakdown</a></li>
+        </ul>
+    </div>
+    <p class="clear" />
 	<div class="row">
 		<div class="col-xs-6">
 			<label title="Driver Id">Dr. Id</label> {{vehicleDetailsData.driver.driverCode}}
