ContolView: Start report added and other issues fixes added

--- a/sigmaCabs/app/views/dispatches/bookingDetailedInfoSplitView.html
+++ b/sigmaCabs/app/views/dispatches/bookingDetailedInfoSplitView.html
@@ -4,8 +4,8 @@
 		<div class="col-xs-6"><label title="Customer Id">C.Id</label>{{bookingDetailsData.customer.customerCode}}</div>
 		<div class="col-xs-6">
 			<select title="Customer No" class="left" data-ng-model="bookingDetailsData.bookingCallCustomerNo">
-				<option ng-if="bookingDetailsData.customer.mobile" value="{{bookingDetailsData.customer.mobile}}" title="Primary No." ng-selected="true">Pri.No</option>
-				<option ng-if="bookingDetailsData.customer.altMobile" value="{{bookingDetailsData.customer.altMobile}}" title="Alternate No.">Alt.No</option>
+				<option ng-selected="bookingDetailsData.customer.mobile" value="{{bookingDetailsData.customer.mobile}}" title="Primary No.">Pri.No</option>
+				<option value="{{bookingDetailsData.customer.altMobile}}" title="Alternate No.">Alt.No</option>
 			</select>
 			<span title="Call" class="call-icon" data-ng-click="fnBookingCallCustomer()"><span class="glyphicon glyphicon-earphone"></span> Call</span>
 			<p class="clear" />
@@ -111,8 +111,8 @@
 		</div>
 		<div class="col-xs-6">
 			<select title="Driver No" data-ng-model="bookingDetailsData.bookingCallDriverNo" class="left">
-				<option ng-if="bookingDetailsData.driver.mobile" value="{{bookingDetailsData.driver.mobile}}" title="Driver No." ng-selected="true">D.No</option>
-				<option ng-if="bookingDetailsData.vehicle.registeredMobile" value="{{bookingDetailsData.vehicle.registeredMobile}}" title="Registered No.">R.No</option>
+				<option value="{{bookingDetailsData.driver.mobile}}" title="Driver No.">D.No</option>
+				<option ng-selected="bookingDetailsData.vehicle.registeredMobile" value="{{bookingDetailsData.vehicle.registeredMobile}}" title="Registered No.">R.No</option>
 			</select>
 			<span title="Call" class="call-icon" data-ng-click="fnBookingCallDriver()"><span class="glyphicon glyphicon-earphone"></span> Call</span>
 			<p class="clear" />
