--- a/sigmaCabs/app/views/bookings/customerFeedback.html
+++ b/sigmaCabs/app/views/bookings/customerFeedback.html
@@ -37,7 +37,7 @@
                         </div>
                         <div class="fieldContainer relative">
                             <label class="labelCompact requiredField">Reason</label><!--  ng-model="" -->
-                            <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="feedback.reasonId" data-ng-options="obj.id as obj.description for obj in vehicleComplaintReasonTypes"></select>
+                            <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="feedback.reasonId" data-ng-options="obj.id as obj.reason for obj in vehicleComplaintReasonTypes"></select>
                         </div>
                         <div class="fieldContainer relative">
                             <label class="labelCompact requiredField">Priority</label>
@@ -57,7 +57,7 @@
                         </div>
                         <div class="fieldContainer relative">
                             <label class="labelCompact requiredField">Reason</label><!--  ng-model="" -->
-                            <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="suggestions.reasonId" data-ng-options="obj.id as obj.description for obj in vehicleSuggestionReasonTypes"></select>
+                            <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="suggestions.reasonId" data-ng-options="obj.id as obj.reason for obj in vehicleSuggestionReasonTypes"></select>
                         </div>
                         <div class="fieldContainer relative">
                             <label class="labelCompact requiredField">Priority</label>
