--- a/sigmaCabs/app/views/dispatches/changeVehicle.html
+++ b/sigmaCabs/app/views/dispatches/changeVehicle.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact requiredField">Reason</label><!--  ng-model="" -->
-                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="vChange.reasonId" data-ng-options="obj.id as obj.description for obj in vehicleReasonTypes"></select>
+                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="vChange.reasonId" data-ng-options="obj.id as obj.reason for obj in vehicleReasonTypes"></select>
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Priority</label>
