--- a/sigmaCabs/app/views/dispatches/vehicleBookingClose.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingClose.html
@@ -114,7 +114,7 @@ width: 115px;">{{bookingClose.tripTime}}</span>
                 <p class="clear"/>
                 <div class="fieldContainer fieldContainer-lg relative left margin-right10">
                     <label class="labelCompact">Reason</label>
-                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="bookingClose.reasonId" data-ng-options="obj.id as obj.description for obj in vehicleBkngCloseReasonTypes"></select>
+                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="bookingClose.reasonId" data-ng-options="obj.id as obj.reason for obj in vehicleBkngCloseReasonTypes"></select>
                 </div>
                 <div class="fieldContainer fieldContainer-lg relative left margin-right10" style="height:60px;">
                     <label class="labelCompact">Comments</label>
