--- a/sigmaCabs/app/views/dispatches/vehicleBookingStart.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingStart.html
@@ -44,7 +44,7 @@
                     <div>
                         <div class="fieldContainer relative">
                             <label class="labelCompact requiredField">Reason</label>
-                            <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="bookingStart.reasonId" data-ng-options="obj.id as obj.description for obj in vehicleReasonTypes"></select>
+                            <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="bookingStart.reasonId" data-ng-options="obj.id as obj.reason for obj in vehicleReasonTypes"></select>
                         </div>
                         <div class="fieldContainer relative" style="height:75px;">
                             <label class="labelCompact">Comments</label>
