--- a/sigmaCabs/app/views/dispatches/vehicleBookingTariff.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingTariff.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Reason</label><!--  ng-model="" -->
-                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="vChangeTariff.reasonId" data-ng-options="obj.id as obj.description for obj in vehicleComplaintReasonTypes"></select>
+                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="vChangeTariff.reasonId" data-ng-options="obj.id as obj.reason for obj in vehicleComplaintReasonTypes"></select>
                 </div>
                 <!-- <div class="fieldContainer relative">
                     <label class="labelCompact">Priority</label>
