--- a/sigmaCabs/app/views/dispatches/vehicleBreakStart.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBreakStart.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact requiredField">Break Reason</label>
-                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="breakStart.reasonId" data-ng-options="obj.id as obj.description for obj in vehicleBreakReasonTypes"></select>
+                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="breakStart.reasonId" data-ng-options="obj.id as obj.reason for obj in vehicleBreakReasonTypes"></select>
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact requiredField">Request Time</label>
