--- a/sigmaCabs/app/views/chat/chatForm.html
+++ b/sigmaCabs/app/views/chat/chatForm.html
@@ -1,29 +1,32 @@
 <fieldset data-ng-controller="chatController" class="chatContainer">
     <legend class="searchbox-border">Chat</legend>
 
-    <div class="fieldContainer relative">
-        <label class="labelCompact">Process</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact" >
-            <option>Choose</option>
-        </select>
-    </div>
-    <div class="fieldContainer relative">
-        <label class="labelCompact">Name</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact" >
-            <option>Choose</option>
-        </select>
-    </div>
-    <p class="clear" />
-    <div class="relative chatMsgContainer"></div>
-    <hr class="buttonSpliter" />
-    <div class="mainButtonContainer">
-        <div>
-            <button class="btnCompact btn-success" style="margin:0px;" data-ng-click="fnShowTemplates()">Templates</button>
-            <textarea class="chatMsgText"></textarea>
-            <button class="btnCompact btn-success" style="margin:0px;" data-ng-click="fnShowTemplates()">Send</button>
+    <div style="position:relative;">
+        <div class="fieldContainer relative">
+            <label class="labelCompact">Process</label>
+            <select class=" validate[maxSize[36]] selectFieldCompact" >
+                <option>Choose</option>
+            </select>
+        </div>
+        <div class="fieldContainer relative">
+            <label class="labelCompact">Name</label>
+            <select class=" validate[maxSize[36]] selectFieldCompact" >
+                <option>Choose</option>
+            </select>
+        </div>
+        <p class="clear" />
+        <div class="relative chatMsgContainer"></div>
+        <hr class="buttonSpliter" />
+        <div class="mainButtonContainer">
+            <div>
+                <button class="btnCompact btn-success" style="margin:0px;" data-ng-click="fnShowTemplates()">Templates</button>
+                <textarea class="chatMsgText"></textarea>
+                <button class="btnCompact btn-success" style="margin:0px;" data-ng-click="fnShowTemplates()">Send</button>
+            </div>
+            <p class="clear"/>
         </div>
         <p class="clear"/>
+        <div class="wipOverlay" title="Work in Progress..."></div>
     </div>
-    <p class="clear"/>
 </fieldset>
 <p class="clear"/>
