--- a/sigmaCabs/app/views/dispatches/changeVehicleLocation.html
+++ b/sigmaCabs/app/views/dispatches/changeVehicleLocation.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact requiredField">Reason</label><!--  ng-model="" -->
-                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="changeLocation.reasonId" data-ng-options="obj.id as obj.description for obj in vehicleChangeLocReasonTypes"></select>
+                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="changeLocation.reasonId" data-ng-options="obj.id as obj.reason for obj in vehicleChangeLocReasonTypes"></select>
                 </div>
                 <div class="fieldContainer relative" style="height:75px;">
                     <label class="labelCompact">Comments</label>
