--- a/sigmaCabs/app/views/dispatches/changeVehicleStatus.html
+++ b/sigmaCabs/app/views/dispatches/changeVehicleStatus.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact requiredField">Reason</label><!--  ng-model="" -->
-                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="vChangeStatus.reasonId" data-ng-options="obj.id as obj.description for obj in vehicleChangeStatusReasonTypes"></select>
+                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="vChangeStatus.reasonId" data-ng-options="obj.id as obj.reason for obj in vehicleChangeStatusReasonTypes"></select>
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact requiredField">Priority</label>
