--- a/sigmaCabs/app/views/dispatches/vehicleBookingRejected.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingRejected.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact requiredField">Reason</label><!--  ng-model="" -->
-                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="vReject.reasonId" data-ng-options="obj.id as obj.description for obj in vehicleBkngRejectReasonTypes"></select>
+                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="vReject.reasonId" data-ng-options="obj.id as obj.reason for obj in vehicleBkngRejectReasonTypes"></select>
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact requiredField">Priority</label>
